--- a/views/gameEnd.hbs
+++ b/views/gameEnd.hbs
@@ -17,7 +17,7 @@
 
   <div id="plants">
     {{#each viewedPlants}}
-    <div id="card">
+    <div class="card">
       <div>
         <img src="{{this.plant.imageUrl}}" alt="{{this.plant.commonName}}" class="plant-img">
       </div>
