wip making clean game router

--- a/views/gameMode.hbs
+++ b/views/gameMode.hbs
@@ -27,7 +27,7 @@
       {{/if}}
       {{#if gameplay.cardAnswerDisplay}}
       <div id="answer-box" >
-        <p>{{gameplay.message}}</p>
+        <p class="{{gameplay.classNameForMessage}}">{{gameplay.message}}</p>
         <a class="choice-btn" href="/game/{{gameplay.mode}}/next">Plante suivante</a>
       </div>
       {{/if}}
