file broken, wait till next commit

--- a/views/gameMode.hbs
+++ b/views/gameMode.hbs
@@ -31,6 +31,11 @@
         <a class="choice-btn" href="/game/{{gameplay.mode}}/next">Plante suivante</a>
       </div>
       {{/if}}
+    {{/if}}
+    {{#if gameplay.cardAnswerDisplay}}
+    <div>
+      <p class="{{gameplay.classNameForMessage}}">{{gameplay.message}}</p>
+      <a href="/game/{{gameplay.mode}}/next">Plante suivante</a>
     </div>
   </div>
 </div>
