--- a/views/recipeAdd.hbs
+++ b/views/recipeAdd.hbs
@@ -18,7 +18,7 @@
             <label for="plant">Plante comestible</label>
             <select name="plant" id="plant" multiple>
                 {{#each plants}}
-                    <option value="{{this._id}}">{{this.commonName}}</option>
+                    <option class="plant-option" value="{{this._id}}">{{this.commonName}}</option>
                 {{/each}}
             </select>
     
@@ -44,8 +44,10 @@
             <label for="instructions">Instructions</label>
             <textarea id="instructions" name="instructions" rows="5" cols="60"></textarea>
     
-            <label for="image">Télécharger une image</label>
-            <input type="file" id="image" name="image">
+            <div id="image-upload-box">
+                <label for="image">Télécharger une image</label>
+                <input type="file" id="image" name="image">
+            </div>
     
             <button id="submit-create-form">Créer la recette</button>
     
