--- a/views/recipeOne.hbs
+++ b/views/recipeOne.hbs
@@ -1,13 +1,17 @@
 {{!-- Display the details of a recipe --}}
 <div>
 
-    <h2>{{recipe.name}}</h2> 
+    <div id="recipe-title">
+        <h2>{{recipe.name}}</h2> 
+    </div>
 
     {{#if creator}}
-        <a href="/recipes/delete/{{recipe._id}}">"DELETE" icon</a>
-        {{!-- <img src="/images/icons/trash-alt.svg" alt="trash-icon"> --}}
-        <a href="/recipes/edit/{{recipe._id}}">"EDIT" icon</a>
-        {{!-- <img src="/images/icons/pencil.svg" alt="edit-icon"> --}}
+        <a href="/recipes/delete/{{recipe._id}}">
+            <img src="/images/icons/trash-alt.svg" alt="trash-icon">
+        </a>
+        <a href="/recipes/edit/{{recipe._id}}">
+            <img src="/images/icons/pencil.svg" alt="edit-icon">
+        </a>
     {{/if}}
 
     <section id="back-link">
