--- a/public/stylesheets/recipes.css
+++ b/public/stylesheets/recipes.css
@@ -221,18 +221,136 @@ body {
 
 /* *** DISPLAY ONE RECIPE *** */
 
-#recipe-title {
-    background-color: rgba(255, 255, 255, 0.8);
-    border: 2px solid black;
-    border-radius: 0px;
-    padding: 10px;
+#one-recipe-main {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 #recipe-title h2 {
+    background-color: rgba(255, 255, 255);
+    border: 2px solid black;
+    border-radius: 20px;
+    padding: 10px;
     font-size: 3rem;
+    text-align: center;
+    width: fit-content;
+}
+
+#one-recipe-top-links {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: center;
+    border: 2px solid black;
+    border-radius: 20px;
+    padding: 10px;
+    background-color: rgba(255, 255, 255, 0.9);
+    border: 2px solid black;
+    border-radius: 20px;
+    padding: 5px;
+    gap: 20px;
+}
+
+#one-recipe-top-links a {
+    width: 40px;
+    padding: 10px;
+}
+
+#one-recipe-top-links a:hover {
+    width: 45px;
+    transition: 0.2s ease-in-out;
+}
+
+#recipe-card {
+    margin-top: 20px;
+    background-color: rgba(255, 255, 255, 0.9);
+    border: 2px solid black;
+    border-radius: 20px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 10px
+}
+
+#recipe-card-top {
+    display: flex;
+    flex-direction: row;
+    font-size: 2rem;
+    gap: 50px;
+    justify-content: space-between;
+    align-items: center;
+}
+
+#recipe-image {
+    width: 200px;
+    height: 200px;
+    object-fit: cover;
+    border: 1px solid black;
+    border-radius: 10px;
+    padding: 10px;
+}
+
+#recipe-core {
+    align-self: flex-start;
+    font-family: Roboto;
+    font-size: 2rem;
+}
+
+/* *** EDIT ONE RECIPE *** */
+
+#edit-recipe-main {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+#edit-recipe-main form{
+    font-family: roboto;
+    font-size: 2rem;
+    font-weight: 700;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 40vw;
+    gap: 20px;
+    margin-top: 20px
+}
+
+#edit-recipe-main form label, input {
+    width: 60vw;
+    text-align: center;
+}
+
+#plant {
+    font-family: roboto;
+    font-size: 2rem;
+    width: 60vw;
+    border-radius: 10px;
+}
+
+#edit-recipe-main form input {
+    border-radius: 10px;
+    height: 3rem;
+    font-size: 2rem;
 }
 
 
+#submit-edit-form {
+    padding: 10px;
+    margin-bottom: 40px;
+    background-color: rgba(255, 255, 255, 0.9);
+    border: 2px solid black;
+    border-radius: 20px;
+    font-family: roboto;
+    font-size: 2rem;
+    cursor: pointer;
+}
+
+#submit-edit-form:hover {
+    font-size: 2.2rem;
+    transition: 00.5s ease-in-out;
+}
 @media(max-width : 600) {
     #add-form-container form label, input {
         width: 90vw;
