--- a/views/signin.hbs
+++ b/views/signin.hbs
@@ -1,7 +1,7 @@
 <section class="signin form-container">
     <div id="big-div">
       <header class="form-header">
-          <h1 class="form-title">Welcome Back !</h1>
+          <h1 class="form-title">Bienvenue !</h1>
       </header>
       
       {{> flashMessage}}
