--- a/public/stylesheets/signup-in.css
+++ b/public/stylesheets/signup-in.css
@@ -47,7 +47,8 @@ form {
 }
 
 form div {
-  padding-top: 12px;
+  padding-top: 15px;
+  font-weight: 600;
 }
 
 .button-primary {
@@ -55,7 +56,7 @@ form div {
   border: 2px solid black;
   border-radius: 20px;
   text-align: center;
-  padding: 5px;
+  padding: 5px 10px 5px 10px;
 }
 
 .button-primary:hover {
@@ -64,7 +65,7 @@ form div {
 }
 
 .pixel-container img {
-  margin-top: 15px;
+  margin-top: 20px;
   width: 70px;
   height: 70px;
   object-fit: cover;
