--- a/views/signup.hbs
+++ b/views/signup.hbs
@@ -27,6 +27,12 @@
             <div>
                 <button class="button-primary white">S'inscrire</button>
             </div>
+
+            <div class="pixel-container">
+            <img src="/images/pixelarts/champi-pixel-mario-green.png" alt="champignon vert">
+            <img src="/images/pixelarts/fleur-pixel-mario-bleue.jpeg" alt="fleur bleu">
+            <img src="/images/pixelarts/champi-pixel-mario-red.png" alt="champignon rouge">
+          </div>
          </form>
     </div>
 
