--- a/views/signup.hbs
+++ b/views/signup.hbs
@@ -1,7 +1,7 @@
 <section class="signup form-container">
     <div id="big-div">
         <header class="form-header">
-            <h1 class="form-title">REGISTER</h1>
+            <h1 class="form-title">S'inscrire</h1>
         </header>
         
           {{> flashMessage}}
@@ -28,12 +28,13 @@
                 <button class="button-primary white">S'inscrire</button>
             </div>
 
-            <div class="pixel-container">
+            {{!-- <div class="pixel-container">
             <img src="/images/pixelarts/champi-pixel-mario-green.png" alt="champignon vert">
             <img src="/images/pixelarts/fleur-pixel-mario-bleue.jpeg" alt="fleur bleu">
-            <img src="/images/pixelarts/champi-pixel-mario-red.png" alt="champignon rouge">
-          </div>
+            <img src="/images/pixelarts/champi-pixel-mario-red.png" alt="champignon rouge"> --}}
+          {{!-- </div> --}}
          </form>
+            <div id="avatar-view"></div>
     </div>
 
 </section>
