--- a/public/stylesheets/signup-in.css
+++ b/public/stylesheets/signup-in.css
@@ -70,9 +70,15 @@ form div {
   object-fit: cover;
 }
 
+.pixel-container-flower img {
+  margin-top: 15px;
+  width: 80px;
+  height: 80px;
+  object-fit: cover;
+}
+
 #avatar-view {
   height: 180px;
   width: 180px;
   padding-bottom: 20px;
 }
-
